--- a/src/components/Destination/Destination.css
+++ b/src/components/Destination/Destination.css
@@ -19,3 +19,10 @@
     background: #dbdbdb;
     padding:20px;
 }
+.transport-img{
+    width: 100px;
+    height: 100px;
+}
+.person-img {
+    width: 20px;
+}
